push an artical about how to use __init__

--- a/ai_skills/langgraph/5.build_a_customer_support_bot/5.Build_a_Customer_Support_Bot.ipynb
+++ b/ai_skills/langgraph/5.build_a_customer_support_bot/5.Build_a_Customer_Support_Bot.ipynb
@@ -583,8 +583,43 @@
     "        11. cursor.close()使用cursor对象的close方法，关闭游标。    conn.close()使用conn对象的close方法关闭连接，这里释放了配置对象的内存。\n",
     "    4. **输出**：list[dict]，最终返回results变量，我们拿到的最终的表格\n",
     "3. search_flights\n",
-    "4. update_ticket_to_new_flight\n",
-    "5. cancel_ticket"
+    "    1. **作用**：根据出发地、目的地、起飞时间范围和返回数量限制，从数据库中查询符合条件的航班信息，并返回字典列表格式的结果。\n",
+    "    2. **参数**：起飞时间、到达时间、开始时间、结束时间，返回数量限制\n",
+    "    3. **过程**：\n",
+    "        1. 使用sqlite的模块对象的connect方法，创建一个数据库文件配置对象，通过这个对象配置好了数据库信息和数据库操作工具。\n",
+    "        2. 新生成的数据库链接对象conn具有cursor方法，可以使用cursor进行sql语句查询\n",
+    "        3. 定义sql语句\n",
+    "        4. 创建一个列表params\n",
+    "        5. 判断，如果参数-起飞时间存在，则为query对象增加一个字符串对象，这里是字符串假发运算，可以直接将字符串增加到query的后面。\n",
+    "        6. 这里在上面条件成立的情况家，为刚刚建立的params列表增加一个对象，这个对象是输入的参数内容，参数要求是输入起飞机场，然后是字符串类型对象。\n",
+    "        7. 所以，如果输入了四个参数的话，最终query就会增加四个条件字符串进去，通过字符串类型对象的加法运算增加。\n",
+    "        8. 然后将limit参数的内容也添加到params的列表里面，limit是一个数字类型的参数。\n",
+    "        9. 然后使用cursor对象的execute方法进行sql查询，参数1是刚才生成的sql语句，sql2是params，这里会用params里的值顺序替代问号，就可以进行条件内容的替换了。\n",
+    "        10. 然后将查询的结果全部取出来\n",
+    "        11. 将查询结果的列名取出来，列名信息以元组的形式存储在了description中，将每个元组的第一个索引取出就是列的顺序了。\n",
+    "        12. 然后生成一个惰性迭代器，zip，使用循环调用将列名与表内容进行匹配。\n",
+    "        13. 关闭游标\n",
+    "        14. 关闭链接配置对象\n",
+    "        15. 返回最终的查询结果。\n",
+    "\n",
+    "    5. **输出**：\n",
+    "\n",
+    "5. update_ticket_to_new_flight\n",
+    "    1. **作用**：\n",
+    "\n",
+    "    2. **参数**：\n",
+    "\n",
+    "    3. **过程**\n",
+    "\n",
+    "    4. **输出**：\n",
+    "7. cancel_ticket\n",
+    "    1. **作用**：\n",
+    "\n",
+    "    2. **参数**：\n",
+    "\n",
+    "    3. **过程**\n",
+    "\n",
+    "    4. **输出**："
    ]
   },
   {
